# CTF-Term

./: .gitignore  AUTHORS.md  CONTRIBUTING.md  DEPLOYMENT.md  FEATURES.md  GITHUB_SETUP.md  INSTALLATION_SUMMARY.md  LICENSE  NAME_OPTIONS.md  NAME_SUMMARY.md  PYPI_UPLOAD_GUIDE.md  README.md  RUN_THIS_TO_UPLOAD.txt  UPLOAD_INSTRUCTIONS.md  UPLOAD_NOW.md  pyproject.toml  upload_pypi_now.sh  upload_to_pypi.sh
examples/: advanced_pack.yml  sample_pack.yml
src/ctfterm/: __init__.py  __main__.py  cli.py  db.py  model.py  packs.py  paths.py  security.py  settings.py
src/ctfterm/services/: challenges.py  flags.py  scoreboard.py  users.py
src/ctfterm/tui/: app.py  styles.tcss
src/ctfterm/tui/views/: __init__.py  about.py  challenge_detail.py  challenges.py  home.py  scoreboard.py
src/ctfterm/tui/widgets/: __init__.py  dialogs.py  footer.py
tests/: __init__.py  test_import.py  test_scoreboard.py  test_submit.py
